--- a/styles/index.css
+++ b/styles/index.css
@@ -86,6 +86,7 @@ p{
 #content{
     display: flex;
     flex-direction: row;
+    border-bottom: thin white solid;
 }
 
 .content_info{
@@ -138,6 +139,42 @@ a:visited{
     top: 0;
     left: 0;
 }
+
+#additional{
+    display: flexbox;
+    flex-direction: column;
+}
+
+#additional_row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.volume_info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #252525;
+    border-radius: 10px;
+    padding-bottom: 5px;
+}
+
+.volume_img{
+    height: 100px;
+    width: 200px;
+}
+
+.volume_title{
+    text-align: center;
+    inline-size: 175px;
+    object-fit: cover;
+    overflow: visible;
+    word-wrap: break-word;
+    hyphens: manual;
+}
+
+
 
 
 
