--- a/styles/tvSeries.css
+++ b/styles/tvSeries.css
@@ -78,9 +78,14 @@ h1{
     color: white;
 }
 
-h2{
+#content_title{
+    margin: 2% 0;
+}
+
+.item_title{
     font-family: 'Montserrat', sans-serif;
     color: white;
+    font-weight: normal;
 }
 
 p{
@@ -88,25 +93,65 @@ p{
     font-family: 'Montserrat', sans-serif;
 }
 
-.content{
+.content_item_p{
+    margin: 2% 0;
+    font-size: small;
+    line-height: 1.2;
+    text-align: left;
+    inline-size: 400px;
+    object-fit: cover;
+    overflow: visible;
+    word-wrap: break-word;
+    hyphens: manual;
+}
+
+#content{
     display: flex;
     flex-direction: column;
+    justify-content: center;;
+    margin-bottom: 2%;
 }
 
 .content_item{
     display:flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 2%;
+    align-items: center;
+    margin: 1% 1%;
     border-radius: 10px;
     background-color: #252525;
     width: inherit;
 
 }
 
+.content_item_image{
+    width: 350px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin: 2% 0;
+}
+
+.content_link:link, .content_link:active, .content_link:visited{
+    text-decoration: none;
+}
+
+.content_quick_info{
+    display: flex;
+    flex-direction: row;
+    margin: 2% 0;
+}
+ 
+.item_title_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
 h3{
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    font-size: medium;
+    font-weight: normal;
     color: white;
     padding: 0px 7px;
     border-left: thin white solid;
@@ -117,28 +162,11 @@ a:visited{
     color: gray;
 }
 
-#container{
-    position: relative;
-    margin: 1% 8%;
-}
-
-#img1{
-    position: absolute;
-    z-index: 2;
-    top: 12%;
-    left: 300px;
-}
-
-#img2{
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-}
 
 #additional{
     display: flexbox;
     flex-direction: column;
+    border-top: thin white solid;
 }
 
 #additional_row{
@@ -147,7 +175,7 @@ a:visited{
     justify-content: space-around;
 }
 
-.volume_info{
+.episode_info{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -156,12 +184,12 @@ a:visited{
     padding-bottom: 5px;
 }
 
-.volume_img{
+.episode_img{
     height: 100px;
     width: 200px;
 }
 
-.volume_title{
+.episode_title{
     text-align: center;
     inline-size: 175px;
     object-fit: cover;
