--- a/styles/index.css
+++ b/styles/index.css
@@ -117,6 +117,15 @@ h3{
     hyphens: manual;
 }
 
+a{
+    font-family:'Montserrat', sans-serif;
+}
+
+a:link{
+    color: white;
+    text-decoration: none;
+}
+
 a:visited{
     color: gray;
 }
@@ -173,3 +182,35 @@ a:visited{
     word-wrap: break-word;
     hyphens: manual;
 }
+
+#footer{
+    margin-top: 4%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #252525;
+}
+
+.footer_item{
+    display: flex;
+    flex-direction: column;
+    margin: 2%;
+    text-align: center;
+    inline-size: 200px;
+    line-height: 1.5;
+}
+
+.footer_item_title{
+    font-weight: bolder;
+    font-size: medium;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.footer_item_row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
